--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
+attrs==24.2.0
 Django==5.1.3
+django-extensions==3.2.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 PyJWT==2.10.0
