--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,5 +6,6 @@ django-extensions==3.2.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 PyJWT==2.10.0
+python-decouple==3.8
 sqlparse==0.5.2
 typing_extensions==4.12.2
