--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.9",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
