--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
+    "@tanstack/react-query": "^5.90.12",
     "axios": "^1.7.9",
     "lucide-react": "^0.469.0",
     "prop-types": "^15.8.1",
