--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.7.9",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.469.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
