--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,18 @@
 asgiref==3.8.1
 attrs==24.2.0
+charset-normalizer==3.4.4
 Django==5.1.3
 django-cors-headers==4.6.0
 django-extensions==3.2.3
+django-filter==24.3
+django-unfold==0.74.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+pillow==12.0.0
 PyJWT==2.10.0
 python-decouple==3.8
+reportlab==4.4.6
+setuptools==80.9.0
 sqlparse==0.5.2
 typing_extensions==4.12.2
-django-filter==24.3
-reportlab==4.4.6
+wheel==0.45.1
