--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.7.9",
     "framer-motion": "^12.23.26",
     "html2pdf.js": "^0.12.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^4.2.1",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.10.1",
     "react-toastify": "^11.0.2"
