--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "html2pdf.js": "^0.12.1",
     "leaflet": "^1.9.4",
